# MIXER

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
Preset Salvati/: Registrazioni Cuffie + Elgato.mxp  Registrazioni Elgato + Cuffie (Low Latency Audio).mxp  Registrazioni Razer Nommo Pro + Elgato (Low Latency).mxp  Registrazioni Razer Nommo Pro + Elgato.mxp
installer/: make_icon.ps1  make_wizard_images.ps1  mixer.iss
src/: app.rc  main.cpp
src/audio/: AudioDevice.h  AudioEngine.cpp  AudioEngine.h  AudioSessions.cpp  AudioSessions.h  DeviceEnumerator.cpp  DeviceEnumerator.h  PolicyConfig.cpp  PolicyConfig.h  RingBuffer.h  WasapiCaptureStream.cpp  WasapiCaptureStream.h  WasapiCommon.h  WasapiRenderStream.cpp  WasapiRenderStream.h
src/config/: MixerConfig.cpp  MixerConfig.h
src/update/: Updater.cpp  Updater.h
